# haskell-dns-message

./: README.md  dns-message.cabal
src/Network/DNS/: Message.hs
test/: Main.hs
test-res/: A.pcap  A.query  A.response  google_com_query_type_a  google_com_query_type_any  google_com_response_type_a  google_com_response_type_any  readme
