name:                dns-message
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dns-message#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.DNS.Message
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , transformers
  default-language:    Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Main-is:          Main.hs
  Build-Depends:    base >= 4.7 && < 5
                  , binary
                  , bytestring
                  , dns-message
                  , HUnit
                  
source-repository head
  type:     git
  location: https://github.com/githubuser/dns-message
